показ изображений в истории с учетом прав